<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">She Diao</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">帐号</string>
    <string name="password">密码</string>
    <string name="user_name_hint">邮箱地址</string>
    <string name="password_hint">请填写密码</string>
    <string name="title">射雕</string>
    <string name="small_title">小英雄</string>
    <string name="login_button">登录</string>
    <string name="signup_button">注册</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash">splash</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

</resources>
